# dpm_srg

./: CMakeLists.txt  README.md  SRG_example.py  SRG_test.py  pyproject.toml  setup.py
.github/workflows/: build.yml
dpm_srg/: wrapper.cpp
include/: SRG.hpp  SRG2D.hpp  SRG3D.hpp
wrappers/: wrapper.cpp
