[build-system]
requires = ["scikit-build-core", "wheel", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "dpm_srg"
version = "0.1.0"
description = "Seeded Region Growing Segmentation"
authors = [{ name = "Digital Porous Media", email = "bcchang@utexas.edu" }]
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = ["numpy"]
